[gd_scene load_steps=51 format=2]

[ext_resource path="res://Resources/Buttons/BackButton/BackButtonHover.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/CharacterCreationProcess/CharacterCreationProcess.gd" type="Script" id=3]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonDisabled.tres" type="StyleBox" id=4]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonDisabled.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/EthnicityPage/ChooseEthnicityStep.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/SkillPointsPage/DistributeSkillPointsStep.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/CharacterSheet/CharacterSheet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/SpecializationPage/ChooseSpecializationStep.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/ProfessionPage/ChooseProfessionStep.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/AttributesPage/AttributesStep.tscn" type="PackedScene" id=11]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonPressed.tres" type="StyleBox" id=12]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonHover.tres" type="StyleBox" id=13]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonNormal.tres" type="StyleBox" id=14]
[ext_resource path="res://Resources/Buttons/CharacterButton/CharacterButtonNormal.tres" type="StyleBox" id=15]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonPressed.tres" type="StyleBox" id=16]
[ext_resource path="res://UI_Elements/progressLightOn.png" type="Texture" id=17]
[ext_resource path="res://UI_Elements/progressLightOff.png" type="Texture" id=18]
[ext_resource path="res://Resources/Buttons/CharacterButton/CharacterButtonPressed.tres" type="StyleBox" id=19]
[ext_resource path="res://Resources/Buttons/CharacterButton/CharacterButtonDisabled.tres" type="StyleBox" id=20]
[ext_resource path="res://UI_Elements/MainMenu/trade_off_4.png" type="Texture" id=21]
[ext_resource path="res://UI_Elements/MainMenu/trade_on_4.png" type="Texture" id=22]
[ext_resource path="res://Resources/Buttons/CharacterButton/CharacterButtonHover.tres" type="StyleBox" id=23]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://UI_Elements/MainMenu/help_on_4.png" type="Texture" id=25]
[ext_resource path="res://UI_Elements/MainMenu/help_off_4.png" type="Texture" id=26]
[ext_resource path="res://Scenes/TricksPage/TricksStep.tscn" type="PackedScene" id=27]
[ext_resource path="res://Scenes/CharacterCreationProcess/DummyStep.gd" type="Script" id=28]
[ext_resource path="res://Scenes/DiseasePage/DiseaseStep.tscn" type="PackedScene" id=29]
[ext_resource path="res://UI_Elements/originBox.png" type="Texture" id=31]
[ext_resource path="res://Fonts/Bold_45_colored.tres" type="DynamicFont" id=32]

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="ButtonGroup" id=5]

[sub_resource type="ButtonGroup" id=20]

[sub_resource type="ButtonGroup" id=21]

[sub_resource type="DynamicFont" id=19]
size = 72
font_data = ExtResource( 24 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=6]
size = 26
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 24 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 280, 269 )
modulate_color = Color( 1.5, 1.5, 1.5, 1 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 280, 269 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 21 )
region_rect = Rect2( 0, 0, 280, 269 )
modulate_color = Color( 0.5, 0.5, 0.5, 1 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 280, 269 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 700, 700 )
modulate_color = Color( 1.5, 1.5, 1.5, 1 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 700, 700 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 700, 700 )
modulate_color = Color( 0.54902, 0.54902, 0.54902, 1 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 700, 700 )

[node name="CharacterCreationProcess" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}
steps_container = NodePath("StepsContainer")
character_sheet_panel = NodePath("CharacterSheet")

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.0234375
anchor_top = 0.917593
anchor_right = 0.383333
anchor_bottom = 0.976852
texture = ExtResource( 31 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StepNameLabel" type="Label" parent="TextureRect"]
unique_name_in_owner = true
anchor_left = 0.0711061
anchor_top = 0.0121951
anchor_right = 0.927765
anchor_bottom = 0.878049
custom_colors/font_color = Color( 0, 0.792157, 0.0862745, 1 )
custom_fonts/font = ExtResource( 32 )
text = "STEP 1: ETHNICITY"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StepContainer" type="MarginContainer" parent="."]
anchor_left = 0.00520833
anchor_top = 0.00277778
anchor_right = 0.994792
anchor_bottom = 0.912037
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 29.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": "
"
}

[node name="EthnicityStep" parent="StepContainer" instance=ExtResource( 6 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0
trait_group = SubResource( 2 )

[node name="ProfessionStep" parent="StepContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0
trait_group = SubResource( 5 )

[node name="AttributesStep" parent="StepContainer" instance=ExtResource( 11 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0

[node name="SpecializationStep" parent="StepContainer" instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0

[node name="SkillPointsStep" parent="StepContainer" instance=ExtResource( 7 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0

[node name="TricksStep" parent="StepContainer" instance=ExtResource( 27 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0
trait_group = SubResource( 20 )

[node name="DiseaseStep" parent="StepContainer" instance=ExtResource( 29 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0
trait_group = SubResource( 21 )

[node name="DummyStep" type="Control" parent="StepContainer"]
unique_name_in_owner = true
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 962.0
script = ExtResource( 28 )

[node name="TextEdit" type="Label" parent="StepContainer/DummyStep"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 19 )
text = "DUMMY STEP"
align = 1
valign = 1

[node name="BackStepButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.401042
anchor_top = 0.917593
anchor_right = 0.447917
anchor_bottom = 0.991667
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 4.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StepsContainer" type="HBoxContainer" parent="."]
anchor_left = 0.453125
anchor_top = 0.919444
anchor_right = 0.858333
anchor_bottom = 0.990741
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 17.09
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EthnicityIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_right = 59.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "ethnicity_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="ProfessionIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 79.0
margin_right = 139.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "profession_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5
__meta__ = {
"_editor_description_": ""
}

[node name="AttributesIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 159.0
margin_right = 219.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "attributes_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="SpecializationIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 239.0
margin_right = 298.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "specialization_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="SkillsIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 318.0
margin_right = 378.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "skills_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="TricksIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 398.0
margin_right = 458.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "tricks_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="DiseasesIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 478.0
margin_right = 537.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "disease_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="ReputationIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 557.0
margin_right = 617.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "reputation_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="FormIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 637.0
margin_right = 697.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "form_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="GearIndicator" type="TextureButton" parent="StepsContainer"]
unique_name_in_owner = true
material = SubResource( 1 )
margin_left = 717.0
margin_right = 777.0
margin_bottom = 77.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "equipment_step_tooltip"
size_flags_horizontal = 7
size_flags_vertical = 3
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="NextStepButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_left = 0.859375
anchor_top = 0.915741
anchor_right = 0.90625
anchor_bottom = 0.989815
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CardButton" type="Button" parent="."]
unique_name_in_owner = true
anchor_top = 0.397
anchor_right = 0.049
anchor_bottom = 0.721
margin_top = -0.505005
margin_right = -0.17601
margin_bottom = -0.280029
custom_styles/hover = ExtResource( 23 )
custom_styles/pressed = ExtResource( 19 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = ExtResource( 20 )
custom_styles/normal = ExtResource( 15 )

[node name="CharacterCardButton" type="Label" parent="CardButton"]
modulate = Color( 0, 0.792157, 0.0862745, 1 )
anchor_left = 0.0748174
anchor_top = 0.049
anchor_right = 0.46
anchor_bottom = 0.912417
margin_left = 36.0
margin_top = -0.0777245
margin_right = 300.962
margin_bottom = -265.0
rect_rotation = 90.0
mouse_filter = 1
custom_fonts/font = SubResource( 6 )
text = "character_sheet_button"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CharacterSheet" parent="." instance=ExtResource( 8 )]
visible = false
mouse_filter = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.926042
anchor_top = 0.907407
anchor_right = 0.965104
anchor_bottom = 0.976852
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="."]
anchor_left = 0.0104167
anchor_top = 0.012037
anchor_right = 0.062
anchor_bottom = 0.105
margin_right = 0.959991
margin_bottom = -0.400002
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="ethnicity_cleared" from="StepContainer/EthnicityStep" to="." method="_disable_next_step"]
[connection signal="ethnicity_selected" from="StepContainer/EthnicityStep" to="." method="_enable_next_step"]
[connection signal="profession_chosen" from="StepContainer/ProfessionStep" to="." method="_enable_next_step"]
[connection signal="profession_cleared" from="StepContainer/ProfessionStep" to="." method="_disable_next_step"]
[connection signal="attributes_cleared" from="StepContainer/AttributesStep" to="." method="_disable_next_step"]
[connection signal="attributes_selected" from="StepContainer/AttributesStep" to="." method="_enable_next_step"]
[connection signal="specialization_chosen" from="StepContainer/SpecializationStep" to="." method="_enable_next_step"]
[connection signal="specialization_cleared" from="StepContainer/SpecializationStep" to="." method="_disable_next_step"]
[connection signal="points_returned" from="StepContainer/SkillPointsStep" to="." method="_disable_next_step"]
[connection signal="points_spent" from="StepContainer/SkillPointsStep" to="." method="_enable_next_step"]
[connection signal="trick_selected" from="StepContainer/TricksStep" to="." method="_enable_next_step"]
[connection signal="trick_unselected" from="StepContainer/TricksStep" to="." method="_disable_next_step"]
[connection signal="button_up" from="BackStepButton" to="." method="_previous_step"]
[connection signal="button_up" from="NextStepButton" to="." method="_next_step"]
[connection signal="button_up" from="CardButton" to="." method="_on_CardButton_button_up"]
